<resources>
    <string name="app_name">bidding-android</string>

    <!--Sign In-->
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="do_sign_up">회원가입하기</string>
    <string name="do_sign_in">로그인하기</string>

    <!--Sign Up-->
    <string name="name">이름</string>
    <string name="repeat_password">비밀번호 확인</string>

    <!--Items-->
    <string name="items">입찰 물품 목록</string>
    <string name="filter">필터</string>
    <string name="search">검색</string>

    <!--Register Item-->
    <string name="do_register_item">물품 등록하기</string>
    <string name="title">물품 이름</string>
    <string name="bidding_information">입찰 정보</string>
    <string name="start_price">시작 가격</string>
    <string name="end_price">종료 가격</string>
    <string name="start_date">시작일</string>
    <string name="end_date">종료일</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">종료 시간</string>
    <string name="do_register">등록하기</string>
    <string name="description">설명</string>

    <!--Item Details-->
    <string name="item_details">물품 상세보기</string>
    <string name="item_details_do_bid">입찰하기</string>
    <string name="item_details_current_price">%s원</string>

    <!--Navigation-->
    <string name="navigation_home">홈</string>
    <string name="navigation_likes">좋아요</string>
    <string name="navigation_my_page">마이페이지</string>

    <!--Bid Item Dialog-->
    <string name="bid_item_title">입찰하기</string>
    <string name="bid_item_input_hint">가격을 입력해주세요</string>

    <!--My Page-->
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_items_bid">낙찰품 목록</string>
    <string name="my_page_items">물품 목록</string>

    <!--Likes-->
    <string name="likes_title">좋아요</string>
</resources>
