<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_sign_in_app_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_sign_in_app_logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/til_sign_in_email"
            app:layout_constraintStart_toStartOf="@id/til_sign_in_email"
            app:layout_constraintTop_toBottomOf="@id/til_sign_in_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_sign_in_do_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/do_sign_up"
            android:textColor="@color/material_dynamic_tertiary40"
            app:layout_constraintStart_toStartOf="@id/til_sign_in_password"
            app:layout_constraintTop_toBottomOf="@id/til_sign_in_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in_sign_in"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:text="@string/do_sign_in"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
