<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_sign_up_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#D9D9D9"
            app:strokeWidth="2dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_photo"
                app:tint="#9D9D9D" />

            <ImageView
                android:id="@+id/img_sign_up_profile"
                android:layout_width="match_parent"
                android:scaleType="center"
                android:layout_height="match_parent"
                android:visibility="invisible" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_sign_up_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_up_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/til_sign_up_email"
            app:layout_constraintStart_toStartOf="@id/til_sign_up_email"
            app:layout_constraintTop_toBottomOf="@id/til_sign_up_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/til_sign_up_name"
            app:layout_constraintStart_toStartOf="@id/til_sign_up_name"
            app:layout_constraintTop_toBottomOf="@id/til_sign_up_name"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_up_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@id/til_sign_up_password"
            app:layout_constraintStart_toStartOf="@id/til_sign_up_password"
            app:layout_constraintTop_toBottomOf="@id/til_sign_up_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/repeat_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_sign_up_do_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/do_sign_in"
            android:textColor="?attr/colorTertiary"
            app:layout_constraintStart_toStartOf="@id/til_sign_up_repeat_password"
            app:layout_constraintTop_toBottomOf="@id/til_sign_up_repeat_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in_sign_in"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:text="@string/do_sign_up"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
