<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.seunghoon.bidding_android.feature.registeritem.CreateItemViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register_item"
            style="@style/Widget.Material3.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/do_register_item"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <HorizontalScrollView
            android:id="@+id/hr_sv_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_register_item">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar_register_item">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_images"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_view_register_item"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="12dp"
                    app:strokeColor="#D9D9D9"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add_photo"
                        app:tint="#9D9D9D" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </HorizontalScrollView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_register_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hr_sv_images">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_item_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_register_item_information"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bidding_information"
            app:layout_constraintStart_toStartOf="@id/tl_register_item_title"
            app:layout_constraintTop_toBottomOf="@id/tl_register_item_title" />

        <LinearLayout
            android:id="@+id/linear_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register_item_information">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_register_item_start_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_item_start_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/start_price"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="24dp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_register_item_end_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_item_end_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/end_price"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_price">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_register_item_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_item_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_edit_calendar"
                    android:drawablePadding="4dp"
                    android:drawableTint="?attr/colorPrimary"
                    android:focusable="false"
                    android:hint="@string/start_date"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="24dp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_register_item_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_item_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_edit_calendar"
                    android:drawablePadding="4dp"
                    android:drawableTint="?attr/colorPrimary"
                    android:focusable="false"
                    android:hint="@string/end_date"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_tl_register_item_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/linear_date"
            app:layout_constraintStart_toStartOf="@id/linear_date"
            app:layout_constraintTop_toBottomOf="@id/linear_date">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_register_item_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_item_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="4dp"
                    android:drawableTint="?attr/colorPrimary"
                    android:focusable="false"
                    android:hint="@string/start_time"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="24dp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_register_item_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_item_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="4dp"
                    android:drawableTint="?attr/colorPrimary"
                    android:focusable="false"
                    android:hint="@string/end_time"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_register_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="@id/linear_tl_register_item_time"
            app:layout_constraintStart_toStartOf="@id/linear_tl_register_item_time"
            app:layout_constraintTop_toBottomOf="@id/linear_tl_register_item_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_item_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register_item_register"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:onClick="@{() -> viewModel.createPresignedUrl()}"
            android:text="@string/do_register"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
