<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_my_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="26dp"
            android:text="@string/my_page_title"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_my_page_profile"
                    android:layout_width="164dp"
                    android:layout_height="164dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="34dp"
                    app:cardCornerRadius="120dp">

                    <ImageView
                        android:id="@+id/img_my_page_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="center" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_my_page_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_my_page_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="?attr/colorOutline" />

                <TextView
                    android:id="@+id/tv_my_page_items_bid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="62dp"
                    android:text="@string/my_page_items_bid"
                    android:textSize="22sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_my_page_items_bid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_my" />

                <TextView
                    android:id="@+id/tv_my_page_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/my_page_items"
                    android:textSize="22sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_my_page_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingBottom="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_my" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
